--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,9 +15,11 @@
         </div>
         <div class="offcanvas-body justify-content-center">
                 <ul class="navbar-nav">
-                  <li class="nav-item dropdown" appDropdown>
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"  role="button" id="aboutDropdown">About</a>
-                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                  <li class="nav-item dropdown " >
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"  role="button" id="aboutDropdown">
+                        About
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown" appDropdown>
                         <li><a class="dropdown-item" href="#">Executive Board/Members</a></li>
                         <li><a class="dropdown-item" href="#">Whitepaper/Pitch</a></li>
                         <li><a class="dropdown-item" href="#">Roadmap</a></li>
@@ -27,9 +29,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Press & Media</a>
                   </li>
-                  <li class="nav-item dropdown" appDropdown>
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" id="vastTokenDropdown" style="cursor: pointer;">Vast Token</a>
-                    <ul class="dropdown-menu" aria-labelledby="vastTokenDropdown">
+                  <li class="nav-item dropdown" >
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" id="vastTokenDropdown" style="cursor: pointer;">
+                        Vast Token
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="vastTokenDropdown"  appDropdown>
                       <li><a class="dropdown-item" href="#">Get Vast Token</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -38,13 +42,6 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Community</a>
                   </li>
-                  <li class="dropdown" appDropdown>
-                    <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a style="cursor: pointer;">Save Data</a></li>
-                        <li><a style="cursor: pointer;">Fetch Data</a></li>
-                    </ul>
-                </li>
                 </ul>
             </div>
         </div>
@@ -53,4 +50,3 @@
         </div>
     </div>
 </nav>
-
