fixed HTML Template and Directive to open and close Dropdowns

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,11 +15,11 @@
         </div>
         <div class="offcanvas-body justify-content-center">
                 <ul class="navbar-nav">
-                  <li class="nav-item dropdown " >
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"  role="button" id="aboutDropdown">
+                  <li class="nav-item dropdown" appDropdown>
+                    <a class="nav-link dropdown-toggle" role="button" aria-current="page" href="#">
                         About
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown" appDropdown>
+                    <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Executive Board/Members</a></li>
                         <li><a class="dropdown-item" href="#">Whitepaper/Pitch</a></li>
                         <li><a class="dropdown-item" href="#">Roadmap</a></li>
@@ -29,11 +29,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Press & Media</a>
                   </li>
-                  <li class="nav-item dropdown" >
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" id="vastTokenDropdown" style="cursor: pointer;">
+                  <li class="nav-item dropdown" appDropdown>
+                    <a class="nav-link dropdown-toggle" role="button" style="cursor: pointer;">
                         Vast Token
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="vastTokenDropdown"  appDropdown>
+                    <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Get Vast Token</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
