add approuting and components for contentgeneration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <app-header></app-header>
+<div class="container mt-">
+    <div class="row">
+        <div class="col-md-5">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
