--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" routerLink="/">
             <img class="logo" src="assets/images/logo/V-icon.png" alt="Bootstrap" height="65">
         </a>
         <button class="navbar-toggler text-white " type="button" data-bs-toggle="offcanvas"
@@ -9,7 +9,7 @@
         </button>
         <div class="offcanvas offcanvas-start" id="offcanvasSidebar" tabindex="-1" aria-labelledby="SidebarLabel">
             <div class="offcanvas-header">
-                <div id="SidebarLabel" class=".sideBarLogo">
+                <div id="SidebarLabel" class="mx-auto">
                     <img src="assets/images/logo/cropped-V.png" alt="Bootstrap" height="50">
                 </div>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasSidebar"
@@ -18,7 +18,7 @@
             <div class="offcanvas-body justify-content-center">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown" appDropdown>
-                        <a class="nav-link dropdown-toggle" role="button" aria-current="page" href="#">
+                        <a routerLink="/about" routerLinkActive="active" class="nav-link dropdown-toggle" role="button" aria-current="page" >
                             About
                         </a>
                         <ul class="dropdown-menu">
@@ -37,10 +37,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Press & Media</a>
+                        <a class="nav-link" routerLink="/press" routerLinkActive="active">Press & Media</a>
                     </li>
                     <li class="nav-item dropdown" appDropdown>
-                        <a class="nav-link dropdown-toggle" role="button" style="cursor: pointer;">
+                        <a routerLink="/vast-token" routerLinkActive="active" class="nav-link dropdown-toggle" role="button" >
                             Vast Token
                         </a>
                         <ul class="dropdown-menu">
@@ -56,7 +56,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Community</a>
+                        <a routerLink="/community" routerLinkActive="active" class="nav-link" href="#">Community</a>
                     </li>
                 </ul>
             </div>
