added icons and UI/UX improvements for smaller media

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -74,8 +74,20 @@
     color: #323232;
   }
 
-  #ofcanvasSidebar {
+  #offcanvasSidebar {
     --bs-offcanvas-width: 300px;
+  }
+
+  .nav-link {
+    font-size: x-large;
+  }
+
+  .nav-link .icon-text {
+    margin-left: 1.5rem; /* Adjust the value as needed */
+  }
+  
+  .navbar-nav .nav-link {
+    text-align: start;
   }
 }
 
@@ -83,7 +95,19 @@
 /* Media from 375px and above*/
 @media (max-width: 375px) {
 
-  #ofcanvasSidebar {
-    --bs-offcanvas-width: 200px;
+  #offcanvasSidebar {
+    --bs-offcanvas-width: 280px;
+  }
+
+  .nav-link {
+    font-size: x-large;
+  }
+
+  .nav-link .icon-text {
+    margin-left: 0.5rem; /* Adjust the value as needed */
+  }
+
+  .navbar-nav .nav-link {
+    text-align: start;
   }
 }
