--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container mt-">
+<div id="containerBody" class="container">
     <div class="row">
         <div class="col-md-5">
             <router-outlet></router-outlet>
