--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,8 +18,8 @@
             <div class="offcanvas-body justify-content-center">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown" appDropdown>
-                        <a routerLink="/about" routerLinkActive="active" class="nav-link dropdown-toggle" role="button" aria-current="page" >
-                            About
+                        <a class="nav-link dropdown-toggle" routerLink="/about" routerLinkActive="active"  role="button" aria-current="page" >
+                            <i *ngIf="showIcons"  class="fas fa-home"></i><span class="icon-text">About</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li >
@@ -37,11 +37,12 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="/press" routerLinkActive="active">Press & Media</a>
+                        <a class="nav-link" routerLink="/press" routerLinkActive="active">
+                            <i *ngIf="showIcons"  class="fas fa-newspaper"></i> <span class="icon-text">Press & Media</span></a>
                     </li>
                     <li class="nav-item dropdown" appDropdown>
-                        <a routerLink="/vast-token" routerLinkActive="active" class="nav-link dropdown-toggle" role="button" >
-                            Vast Token
+                        <a class="nav-link dropdown-toggle" routerLink="/vast-token" routerLinkActive="active"  role="button" >
+                            <i *ngIf="showIcons"  class="fas fa-coins"></i><span class="icon-text">Vast Token</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li>
@@ -56,7 +57,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a routerLink="/community" routerLinkActive="active" class="nav-link" href="#">Community</a>
+                        <a class="nav-link" routerLink="/community" routerLinkActive="active" >
+                            <i *ngIf="showIcons"  class="fas fa-users"></i><span class="icon-text">Community</span></a>
                     </li>
                 </ul>
             </div>
